test/e2e/manifests/other-cluster/agent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
spec:
  template:
    spec:
      containers:
        - name: main
          imagePullPolicy: Never
