test/e2e/manifests/other-cluster/minio-svc.yaml
# This is some very clever stuffs.
# We create a service that loops back to the K3D host that is exposing minio so we can do load and artifacts.
kind: Service
apiVersion: v1
metadata:
  name: minio
spec:
  type: ExternalName
  externalName: host.k3d.internal
