test/e2e/manifests/other-cluster/agent-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent
                port:
                  number: 24368
